Updated README.md, version bump to 1.0, and added header comment to the definitions default file. (#2)

--- a/definitions.yml
+++ b/definitions.yml
@@ -1,10 +1,12 @@
+# definitions.yml file for munge3.py
 basic:
   enabled: true
 
 prepend:
   enabled: true
   munge: [
-    '-'
+    '-',
+    'prod_'
   ]
 
 numbers:
@@ -19,7 +21,8 @@ punctuation:
 append:
   enabled: true
   munge: [
-    '123456'
+    '123456',
+    '_dev'
   ]
 
 transform: 
